--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,66 @@
+:root {
+    --clr-red: rgb(128, 58, 58);
+    --clr-lt-yellow: rgb(250, 242, 208);
+    --clr-lt-green: rgb(203, 236, 225);
+}
+
+.input {
+  display: flex;  
+  justify-content: center;
+  gap: 3rem;
+  padding: 4rem;
+  background-color: var(--clr-lt-green);
+  font-size: 1.5rem;
+}
+
 .zip {
-    color: red;
+    text-align: center;
+    color: var(--clr-red);
+}
+
+#zip {
+    background-color: var(--clr-lt-yellow);
+}
+
+.zip-button {
+    background-color: var(--clr-red);
+    color: var(--clr-lt-green);
+}
+
+.display {
+    height: 100vh;
+    background-color: var(--clr-lt-yellow);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 4rem;
+    gap: 2rem;
+    font-size: 1.5rem;
+}
+
+.town {
+    font-size: 2rem;
+    text-decoration: underline;
+}
+
+.conditions {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    font-size: 2rem;
+}
+
+
+
+
+
+
+
+@media (max-width: 600px) {
+    .input {
+        flex-direction: column;
+    }
+    .town {
+        font-size: 2rem;
+    }
 }
